$Date$

VEGAN RELEASE VERSIONS at http://cran.r-project.org/

Version 2.0-6 (opened October 8, 2012)

	* merge 2350: capscale species score scaling bug fix.
	* merge 2349: multipart print bug fix.
	* merge 2345: FAQ update (github, metric NMDS space).
	* merge 2342: unused factor levels in envfit/factorfit.
	* merge 2341 (partial): visible space in pdf of Rnw files.
	* merge 2336: stricter monoMDS convergence criteria.
	* merge 2334,5: scores.monoMDS,metaMDS updates.
	* merge 2332: add plot.nestednodf().
	* merge 2330,1: ordiR2step() gained arg 'R2scope' and handles
	partial RDA.
	* merge 2328,9: add 'legend' arg to msoplot().
	* merge 2325: fix rotation of axes in 2-d plot.procrustes().
	* merge 2319, 2323: clamtest bug fixes and clarifications.
	* merge 2318: dispindmorista gains p-values of output.
	
Version 2.0-5 (released October 8, 2012)

	* merge r2309: anova.cca.Rd edits.
	* merge r2307: no line breaks within \code{} in Rd.
	* merge r2305: proofread Rd files a..b.
	* merge r2299: fix broken \link{}s in docs. 
	* merge r2297: upgrade docs for L&L 2012 (3r ed.)
	* merge r2291 thru 2296, 2298, 2300: radfit upgrade.
	* merge r2287,8: scoping in anova.ccabyaxis and anova.ccabyterm.
	* merge r2285: add predict.radfit.
	* merge r2262, 2268:2270, and also r1950: mantel and
	mantel.partial gained argument na.rm = FALSE. This needed hand
	editing of merges, and also merging old r1950: beware and test.
	* merge r2271: tweak varpart.Rd. (plot coloured circles).
	* merge r2267: tweak vegdist.Rd (ref to vegdist).
	* merge r2260: streamline adonis (internal changes).
	* merge r2258: protect betadisper against changes in R-devel API.
	* merge r2254: stylistic in examples of Rd files.
	* merge r2252,56,57,61,64,66: add density methods for vegan
	permutation functions and add plot.densityvegan to display these.
	* merge r2250: do not use paste0 in envift.Rd (fails in R 2.14).
	* merge r2249: fix vignette building with TeXLive 2012.